--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-
-streamlit==1.20.0
-pandas==1.5.3
-numpy==1.23.5
-altair==4.2.2
-matplotlib==3.6.2
-seaborn==0.12.2
-pyarrow==10.0.1
-scikit-learn==1.2.2
-openpyxl==3.1.2
-python-dateutil==2.8.2
+streamlit==1.31.0
+pandas==2.2.0
+numpy>=1.26.0
+matplotlib==3.8.2
+plotly==5.18.0
+seaborn==0.13.0
+pillow==10.2.0
